[package]
name = "zbl"
version = "0.1.3"
edition = "2021"

[lib]
name = "zbl"

[dependencies]
once_cell = "1"

[dependencies.windows]
# TODO bumping the version brings on weird API which i'm not sure how to work with
version = "0.43"
features = [
    "Foundation",
    "Graphics_Capture",
    "Graphics_DirectX_Direct3D11",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Console",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI_Accessibility",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
]

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
opencv = "0.88"
