[package]
name = "zbl"
version.workspace = true
edition = "2021"

[lib]
name = "zbl"

[dependencies]
once_cell = "1"
log = "0.4"

[dependencies.windows]
version = "0.61"  # NOTE: this version has to correspond to the version opencv-rust is using
features = [
    "Foundation",
    "Graphics_Capture",
    "Graphics_DirectX_Direct3D11",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D9",
    "Win32_Graphics_Direct3D10",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Console",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI_Accessibility",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
]

[dev-dependencies]
clap = { version = "4", features = ["derive"] }

[dev-dependencies.opencv]
version = "0.94.3"
default-features = false
features = ["highgui"]
