[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "zbl"
version = "0.0.1"
license = { file = "../LICENSE.txt" }
requires-python = ">=3.7"
dependencies = ["numpy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Rust",
]

[project.optional-dependencies]
example = [
    "opencv-python~=4.6.0"
]
