[project]
name = "zbl"
version = "0.1.1"
readme = "../README.md"
requires-python = ">=3.7"
license = { file = "../LICENSE.txt" }
keywords = ["windows", "d3d11", "window-capture", "graphics-capture", "cv"]
dependencies = ["numpy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Rust",
]

[project.optional-dependencies]
example = [
    "opencv-python~=4.6.0"
]

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"
